--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "noFallthroughCasesInSwitch": true,
     "typeRoots": ["node_modules/@types", "src/types"]
   },
-  "include": ["src/**/*", "./vite.config.ts"],
+  "include": ["src", "./vite.config.ts", "src/types"],
   "exclude": ["node_modules", "**/__tests__/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
