--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-contribution-calendar",
+  "description": "A GitHub-like contribution calendar component for React",
   "version": "0.0.36",
   "type": "module",
   "main": "./dist/index.js",
