--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "react-contribution-calendar",
   "description": "A GitHub-like contribution calendar component for React",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/types/react-contribution-calendar.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "files": [
     "./dist"
